force-app/main/default/objects/CYP_to_Job__c/CYP_to_Job__c.object-meta.xml
<CustomObject>
    <label>CYP to Job</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>CYP to Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CYP to Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>