force-app/main/default/objects/CYP_to_Job__c/fields/Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Charge_Rate__c</fullName>
    <label>Charge Rate:</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>