force-app/main/default/objects/CYP_to_Job__c/fields/Child_Young_Person__c.field-meta.xml
<CustomField>
    <fullName>Child_Young_Person__c</fullName>
    <label>Child / Young Person</label>
    <referenceTo>Sensitive_Data__c</referenceTo>
    <relationshipLabel>Children/Young People</relationshipLabel>
    <relationshipName>CYP_to_Jobs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>