force-app/main/default/objects/CYP_to_Job__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This will only show Clients related to the Child / Young Person</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CYP to Jobs</relationshipLabel>
    <relationshipName>CYP_to_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>