force-app/main/default/objects/CYP_to_Job__c/fields/Engagement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Start_Date__c</fullName>
    <label>Engagement Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>