force-app/main/default/objects/CYP_to_Job__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TR1__Job__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Multi-Child/Young Person</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TR1__Job__c</referenceTo>
    <relationshipLabel>Children/Young People</relationshipLabel>
    <relationshipName>CYP_to_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>