force-app/main/default/objects/CYP_to_Job__c/fields/Sensitive_Data_Record__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Data_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sensitive Data Record</label>
    <referenceTo>Sensitive_Data__c</referenceTo>
    <relationshipLabel>CYP to Jobs (Sensitive Data Record)</relationshipLabel>
    <relationshipName>CYP_to_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>