force-app/main/default/objects/CYP_to_Job__c/validationRules/CYP_to_Job_Block_CYP_Being_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>CYP_to_Job_Block_CYP_Being_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNEW()), ISCHANGED(Child_Young_Person__c) )</errorConditionFormula>
    <errorMessage>You cannot change the Child / Young Person once it has been set.</errorMessage>
</ValidationRule>